improving the code with test units